macros/tests/ui/fail/log_unsatisfied_trait.stderr
error[E0277]: `Input` doesn't implement `std::fmt::Display`
  --> $DIR/log_unsatisfied_trait.rs:10:31
   |
10 |     let kvs = log!("Text and {a: Input} and more");
   |                               ^^^^^^^^ `Input` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `Input`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: required because of the requirements on the impl of `antlog_macros_impl::capture::Capture<antlog_macros_impl::capture::CaptureDisplay>` for `Input`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
